<resources>
    <string name="app_name">NMedia</string>
    <string name="app_title">NMedia!</string>
    <string name="avatar_description">Avatar</string>
    <string name="more_menu">More actions</string>
    <string name="likes_count">Likes count</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="menu_remove">Remove</string>
    <string name="save_description">Save description</string>
    <string name="message_text">Message text</string>
    <string name="error_empty_content">Error: message text is empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message_title">Edit message</string>
    <string name="share_message_title">Share post</string>
    <string name="video_view_title">Open video</string>
    <string name="open_editor_title">Open post editor</string>
    <string name="editor_save_button">Save</string>
    <string name="editor_cancel_button">Cancel</string>
    <string name="menu_details">Details</string>
    <string name="editor_edit_button">Edit</string>
    <string name="editor_remove_button">Delete</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_user_posted">%1$s published new post:</string>
    <string name="empty_posts">No posts in this list</string>
    <string name="error_loading">Posts loading failed</string>
    <string name="retry_loading">Retry posts loading</string>
    <string name="error_post_remove">Error removing post</string>
    <string name="error_post_save">Error saving post</string>
    <string name="error_post_like">Error updating post</string>
    <string name="close_snackbar">Close</string>
    <string name="new_posts_available">New posts available</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select image from gallery</string>
    <string name="description_take_photo">Make image with camera</string>
    <string name="description_photo">Attached image</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="google_play_unavailable">Google Play service unavailable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_login_data">Enter login data</string>
    <string name="submit_login_form">Sign in</string>
    <string name="error_auth">Authorization error</string>
</resources>